apps/base/weight-tracker/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weight-tracker-web
  namespace: weight-tracker
  labels:
    app: weight-tracker-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weight-tracker-web
  template:
    metadata:
      labels:
        app: weight-tracker-web
    spec:
      containers:
      - name: web
        image: ghcr.io/omtut/weight-tracker-web:latest # {"$imagepolicy": "flux-system:weight-tracker-web"}
        ports:
        - containerPort: 80
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "200m"
