apps/base/weight-tracker/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: weight-tracker
spec:
  selector:
    app: weight-tracker-api
  ports:
  - name: http
    port: 8000
    targetPort: 8000
