apps/base/weight-tracker/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weight-tracker-web
  namespace: weight-tracker
spec:
  selector:
    app: weight-tracker-web
  ports:
  - name: http
    port: 80
    targetPort: 80
